# SCHOOL-MANAGEMENT-SYSTEM

./: .gitignore  API_INTEGRATIONS_README.md  COMPREHENSIVE_IMPROVEMENTS_TODO.md  DEVELOPMENT_GUIDE.md  Dockerfile  FEATURE_VERIFICATION_REPORT.md  FEE_ENHANCEMENT_COMPLETED.md  FEE_ENHANCEMENT_TODO.md  LEAVE_SYSTEM_GUIDE.md  LOGIN_SYSTEM_GUIDE.md  MOBILE_PWA_README.md  MODERN_PWA_README.md  NOTIFICATION_FIX_README.md  PARENT_ENGAGEMENT_README.md  RATE_LIMITING_SOLUTION.md  README.md  STUDENT_FIELDS_GUIDE.md  TEST_LEAVE_SYSTEM.md  TODO.md  add_column.py  add_default_fee_types.py  add_unpaid_fees.py  admin_cookies.txt  admin_dashboard.html  admin_dashboard_test.html  admin_test.txt  app.py  append_models.txt  check_activity_log.py  check_admin.py  check_created_user.py  check_db.py  check_db_manual.py  check_db_schema.py  check_db_tables.py  check_emails.py  check_enrollment.py  check_fee_types.py  check_fees.py  check_parent_table.py  (+143 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
models/: complaint.py  date_sheet.py  teacher_substitution.py  timetable.py
reports/: stats.json
routes/: admin.py  admin_teacher.py  ai_features.py  api.py  api_integrations.py  attendance.py  auth.py  chart.py  class_fees.py  classes.py  classrooms.py  complaints.py  dashboard.py  date_sheet.py  enhanced_timetable.py  enhanced_timetable_simple.py  fees.py  ip_tracker.py  ip_tracking.py  leave_status.py  mobile.py  notifications.py  parents.py  payment_gateway.py  payments.py  salaries.py  students.py  subjects.py  substitution_system.py  (+3 more)
(+266 files in other folders)
