[project]
name = "school-management-system"
version = "0.1.0"
description = "School Management System"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Werkzeug==3.0.1",
    "SQLAlchemy==2.0.21",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.7",
    "flask-restful==0.3.10",
    "flasgger==0.9.5",
    "flask-cors==4.0.0",
    "Flask-Talisman==1.1.0",
    "Flask-SeaSurf==1.1.1",
    "Authlib==1.2.1",
    "pandas==2.1.1",
    "python-dateutil==2.8.2"
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
extend-exclude = [
    ".venv",
    "__pycache__",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start with False, can enable later
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true